WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197144
Regression(
r243767
) WebFrame::m_navigationIsContinuingInAnotherProcess flag is never reset
https://bugs.webkit.org/show_bug.cgi?id=197144
Summary
Regression(r243767) WebFrame::m_navigationIsContinuingInAnotherProcess flag i...
Chris Dumez
Reported
2019-04-20 21:45:48 PDT
WebFrame::m_navigationIsContinuingInAnotherProcess flag is never reset. This leads to leaking Navigation objects in the UIProcess when reusing a previously suspended process because such process will no longer send the DidDestroyNavigation IPC.
Attachments
Patch
(8.61 KB, patch)
2019-04-20 22:41 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-04-20 22:41:22 PDT
Created
attachment 367903
[details]
Patch
Chris Dumez
Comment 2
2019-04-21 13:14:08 PDT
Comment on
attachment 367903
[details]
Patch Clearing flags on attachment: 367903 Committed
r244493
: <
https://trac.webkit.org/changeset/244493
>
Chris Dumez
Comment 3
2019-04-21 13:14:10 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-04-21 13:15:18 PDT
<
rdar://problem/50082236
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug