Source/WebKit/WebProcess/WebPage/WebFrame.h
@@ -188,7 +188,6 @@ private:
     LoadListener* m_loadListener { nullptr };
     
     uint64_t m_frameID { 0 };
-    bool m_navigationIsContinuingInAnotherProcess { false };
 
 #if PLATFORM(IOS_FAMILY)
     uint64_t m_firstLayerTreeTransactionIDAfterDidCommitLoad { 0 };
